// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsRow renders details list row correctly 1`] = `
<div
  className="ms-Viewport"
  style={
    Object {
      "minHeight": 1,
      "minWidth": 1,
    }
  }
>
  <div
    aria-label={undefined}
    className="ms-DetailsList is-horizontalConstrained undefined"
    data-automationid="DetailsList"
    data-is-scrollable="false"
  >
    <div
      aria-colcount={4}
      aria-label={undefined}
      aria-readonly="true"
      aria-rowcount={6}
      role="grid"
    >
      <div
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          aria-describedby={undefined}
          aria-label={undefined}
          aria-labelledby={undefined}
          className="ms-FocusZone ms-DetailsHeader"
          data-automationid="DetailsHeader"
          data-focuszone-id="FocusZone1"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseMove={[Function]}
          role="row"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            aria-colindex={1}
            aria-labelledby="header0-check"
            className="ms-DetailsHeader-cell ms-DetailsHeader-cellIsCheck"
            onClick={[Function]}
            role="columnheader"
          >
            <span
              className=""
            >
              <div
                aria-checked={undefined}
                aria-describedby="header0-checkTooltip"
                aria-label={undefined}
                className=
                    ms-DetailsRow-check

                    {
                      align-items: center;
                      background-color: transparent;
                      background: none;
                      border: none;
                      box-sizing: border-box;
                      cursor: default;
                      display: flex;
                      height: 40px;
                      justify-content: center;
                      margin-bottom: 0px;
                      margin-left: 0px;
                      margin-right: 0px;
                      margin-top: 0px;
                      opacity: 0;
                      outline: transparent;
                      padding-bottom: 0px;
                      padding-left: 0px;
                      padding-right: 0px;
                      padding-top: 0px;
                      position: relative;
                      vertical-align: top;
                      width: 40px;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid #ffffff;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #666666;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    &:hover {
                      opacity: 1;
                    }
                    &.isHeader {
                      height: 32px;
                    }
                    .ms-Fabric--isFocusVisible & {
                      opacity: 1;
                    }

                data-automationid="DetailsRowCheck"
                data-is-focusable={true}
                data-selection-toggle={true}
                id="header0-check"
                role="checkbox"
              >
                <div
                  className=
                      ms-Check
                      {
                        height: 18px;
                        line-height: 1;
                        position: relative;
                        user-select: none;
                        vertical-align: top;
                        width: 18px;
                      }
                      &:before {
                        background: #ffffff;
                        border-radius: 50%;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        opacity: 1;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                      }
                      $checkHost:hover &, $checkHost:focus &, &:hover, &:focus {
                        opacity: 1;
                      }
                >
                  <i
                    aria-hidden={true}
                    className=
                        ms-Check-circle
                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #c8c8c8;
                          display: inline-block;
                          font-family: "FabricMDL2Icons";
                          font-size: 18px;
                          font-style: normal;
                          font-weight: normal;
                          height: 18px;
                          left: 0px;
                          position: absolute;
                          speak: none;
                          text-align: center;
                          top: 0px;
                          vertical-align: middle;
                          width: 18px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          color: WindowText;
                        }
                    data-icon-name="CircleRing"
                    role="presentation"
                  >
                    
                  </i>
                  <i
                    aria-hidden={true}
                    className=
                        ms-Check-check
                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #c8c8c8;
                          display: inline-block;
                          font-family: "FabricMDL2Icons";
                          font-size: 16px;
                          font-style: normal;
                          font-weight: normal;
                          height: 18px;
                          left: .5px;
                          opacity: 0;
                          position: absolute;
                          speak: none;
                          text-align: center;
                          top: 0px;
                          vertical-align: middle;
                          width: 18px;
                        }
                        &:hover {
                          opacity: 1;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          -ms-high-contrast-adjust: none;
                        }
                    data-icon-name="StatusCircleCheckmark"
                    role="presentation"
                  >
                    
                  </i>
                </div>
              </div>
            </span>
          </div>
          <div
            aria-colindex={2}
            aria-sort="none"
            className="ms-DetailsHeader-cell is-actionable undefined"
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="key"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 24,
              }
            }
          >
            <span
              className=""
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header0-key-name "
                className="ms-DetailsHeader-cellTitle"
                data-is-focusable={true}
                id="header0-key"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className="ms-DetailsHeader-cellName"
                  id="header0-key-name"
                >
                  key
                </span>
              </span>
            </span>
          </div>
          <div
            aria-colindex={3}
            aria-sort="none"
            className="ms-DetailsHeader-cell is-actionable undefined"
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="name"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 24,
              }
            }
          >
            <span
              className=""
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header0-name-name "
                className="ms-DetailsHeader-cellTitle"
                data-is-focusable={true}
                id="header0-name"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className="ms-DetailsHeader-cellName"
                  id="header0-name-name"
                >
                  name
                </span>
              </span>
            </span>
          </div>
          <div
            aria-colindex={4}
            aria-sort="none"
            className="ms-DetailsHeader-cell is-actionable undefined"
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="value"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 24,
              }
            }
          >
            <span
              className=""
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header0-value-name "
                className="ms-DetailsHeader-cellTitle"
                data-is-focusable={true}
                id="header0-value"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className="ms-DetailsHeader-cellName"
                  id="header0-value-name"
                >
                  value
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          aria-describedby={undefined}
          aria-labelledby={undefined}
          className="ms-FocusZone"
          data-focuszone-id="FocusZone2"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="presentation"
        >
          <div
            className="ms-SelectionZone"
            onClick={[Function]}
            onContextMenu={[Function]}
            onDoubleClick={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseDown={[Function]}
            onMouseDownCapture={[Function]}
            role="presentation"
          >
            <div
              className="ms-List"
              role="presentation"
            >
              <div
                className="ms-List-surface"
                role="presentation"
              >
                <div
                  className="ms-List-page"
                  role="presentation"
                  style={Object {}}
                >
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={0}
                    role="presentation"
                  >
                    <div>
                      Item 0
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={1}
                    role="presentation"
                  >
                    <div>
                      Item 1
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={2}
                    role="presentation"
                  >
                    <div>
                      Item 2
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={3}
                    role="presentation"
                  >
                    <div>
                      Item 3
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={4}
                    role="presentation"
                  >
                    <div>
                      Item 4
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailsRow renders details list row with all rows selected correctly 1`] = `
<div
  className="ms-Viewport"
  style={
    Object {
      "minHeight": 1,
      "minWidth": 1,
    }
  }
>
  <div
    aria-label={undefined}
    className="ms-DetailsList is-horizontalConstrained undefined"
    data-automationid="DetailsList"
    data-is-scrollable="false"
  >
    <div
      aria-colcount={4}
      aria-label={undefined}
      aria-readonly="true"
      aria-rowcount={6}
      role="grid"
    >
      <div
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          aria-describedby={undefined}
          aria-label={undefined}
          aria-labelledby={undefined}
          className="ms-FocusZone ms-DetailsHeader"
          data-automationid="DetailsHeader"
          data-focuszone-id="FocusZone10"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseMove={[Function]}
          role="row"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            aria-colindex={1}
            aria-labelledby="header9-check"
            className="ms-DetailsHeader-cell ms-DetailsHeader-cellIsCheck"
            onClick={[Function]}
            role="columnheader"
          >
            <span
              className=""
            >
              <div
                aria-checked={undefined}
                aria-describedby="header9-checkTooltip"
                aria-label={undefined}
                className=
                    ms-DetailsRow-check

                    {
                      align-items: center;
                      background-color: transparent;
                      background: none;
                      border: none;
                      box-sizing: border-box;
                      cursor: default;
                      display: flex;
                      height: 40px;
                      justify-content: center;
                      margin-bottom: 0px;
                      margin-left: 0px;
                      margin-right: 0px;
                      margin-top: 0px;
                      opacity: 0;
                      outline: transparent;
                      padding-bottom: 0px;
                      padding-left: 0px;
                      padding-right: 0px;
                      padding-top: 0px;
                      position: relative;
                      vertical-align: top;
                      width: 40px;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid #ffffff;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #666666;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    &:hover {
                      opacity: 1;
                    }
                    &.isHeader {
                      height: 32px;
                    }
                    .ms-Fabric--isFocusVisible & {
                      opacity: 1;
                    }

                data-automationid="DetailsRowCheck"
                data-is-focusable={true}
                data-selection-toggle={true}
                id="header9-check"
                role="checkbox"
              >
                <div
                  className=
                      ms-Check
                      {
                        height: 18px;
                        line-height: 1;
                        position: relative;
                        user-select: none;
                        vertical-align: top;
                        width: 18px;
                      }
                      &:before {
                        background: #ffffff;
                        border-radius: 50%;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        opacity: 1;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                      }
                      $checkHost:hover &, $checkHost:focus &, &:hover, &:focus {
                        opacity: 1;
                      }
                >
                  <i
                    aria-hidden={true}
                    className=
                        ms-Check-circle
                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #c8c8c8;
                          display: inline-block;
                          font-family: "FabricMDL2Icons";
                          font-size: 18px;
                          font-style: normal;
                          font-weight: normal;
                          height: 18px;
                          left: 0px;
                          position: absolute;
                          speak: none;
                          text-align: center;
                          top: 0px;
                          vertical-align: middle;
                          width: 18px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          color: WindowText;
                        }
                    data-icon-name="CircleRing"
                    role="presentation"
                  >
                    
                  </i>
                  <i
                    aria-hidden={true}
                    className=
                        ms-Check-check
                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #c8c8c8;
                          display: inline-block;
                          font-family: "FabricMDL2Icons";
                          font-size: 16px;
                          font-style: normal;
                          font-weight: normal;
                          height: 18px;
                          left: .5px;
                          opacity: 0;
                          position: absolute;
                          speak: none;
                          text-align: center;
                          top: 0px;
                          vertical-align: middle;
                          width: 18px;
                        }
                        &:hover {
                          opacity: 1;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          -ms-high-contrast-adjust: none;
                        }
                    data-icon-name="StatusCircleCheckmark"
                    role="presentation"
                  >
                    
                  </i>
                </div>
              </div>
            </span>
          </div>
          <div
            aria-colindex={2}
            aria-sort="none"
            className="ms-DetailsHeader-cell is-actionable undefined"
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="key"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 24,
              }
            }
          >
            <span
              className=""
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header9-key-name "
                className="ms-DetailsHeader-cellTitle"
                data-is-focusable={true}
                id="header9-key"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className="ms-DetailsHeader-cellName"
                  id="header9-key-name"
                >
                  key
                </span>
              </span>
            </span>
          </div>
          <div
            aria-colindex={3}
            aria-sort="none"
            className="ms-DetailsHeader-cell is-actionable undefined"
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="name"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 24,
              }
            }
          >
            <span
              className=""
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header9-name-name "
                className="ms-DetailsHeader-cellTitle"
                data-is-focusable={true}
                id="header9-name"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className="ms-DetailsHeader-cellName"
                  id="header9-name-name"
                >
                  name
                </span>
              </span>
            </span>
          </div>
          <div
            aria-colindex={4}
            aria-sort="none"
            className="ms-DetailsHeader-cell is-actionable undefined"
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="value"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 24,
              }
            }
          >
            <span
              className=""
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header9-value-name "
                className="ms-DetailsHeader-cellTitle"
                data-is-focusable={true}
                id="header9-value"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className="ms-DetailsHeader-cellName"
                  id="header9-value-name"
                >
                  value
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          aria-describedby={undefined}
          aria-labelledby={undefined}
          className="ms-FocusZone"
          data-focuszone-id="FocusZone11"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="presentation"
        >
          <div
            className="ms-SelectionZone"
            onClick={[Function]}
            onContextMenu={[Function]}
            onDoubleClick={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseDown={[Function]}
            onMouseDownCapture={[Function]}
            role="presentation"
          >
            <div
              className="ms-List"
              role="presentation"
            >
              <div
                className="ms-List-surface"
                role="presentation"
              >
                <div
                  className="ms-List-page"
                  role="presentation"
                  style={Object {}}
                >
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={0}
                    role="presentation"
                  >
                    <div>
                      Item 0
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={1}
                    role="presentation"
                  >
                    <div>
                      Item 1
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={2}
                    role="presentation"
                  >
                    <div>
                      Item 2
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={3}
                    role="presentation"
                  >
                    <div>
                      Item 3
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={4}
                    role="presentation"
                  >
                    <div>
                      Item 4
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailsRow renders details list row with multiple selections correctly 1`] = `
<div
  className="ms-Viewport"
  style={
    Object {
      "minHeight": 1,
      "minWidth": 1,
    }
  }
>
  <div
    aria-label={undefined}
    className="ms-DetailsList is-horizontalConstrained undefined"
    data-automationid="DetailsList"
    data-is-scrollable="false"
  >
    <div
      aria-colcount={4}
      aria-label={undefined}
      aria-readonly="true"
      aria-rowcount={6}
      role="grid"
    >
      <div
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          aria-describedby={undefined}
          aria-label={undefined}
          aria-labelledby={undefined}
          className="ms-FocusZone ms-DetailsHeader"
          data-automationid="DetailsHeader"
          data-focuszone-id="FocusZone4"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseMove={[Function]}
          role="row"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            aria-colindex={1}
            aria-labelledby="header3-check"
            className="ms-DetailsHeader-cell ms-DetailsHeader-cellIsCheck"
            onClick={[Function]}
            role="columnheader"
          >
            <span
              className=""
            >
              <div
                aria-checked={undefined}
                aria-describedby="header3-checkTooltip"
                aria-label={undefined}
                className=
                    ms-DetailsRow-check

                    {
                      align-items: center;
                      background-color: transparent;
                      background: none;
                      border: none;
                      box-sizing: border-box;
                      cursor: default;
                      display: flex;
                      height: 40px;
                      justify-content: center;
                      margin-bottom: 0px;
                      margin-left: 0px;
                      margin-right: 0px;
                      margin-top: 0px;
                      opacity: 0;
                      outline: transparent;
                      padding-bottom: 0px;
                      padding-left: 0px;
                      padding-right: 0px;
                      padding-top: 0px;
                      position: relative;
                      vertical-align: top;
                      width: 40px;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid #ffffff;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #666666;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    &:hover {
                      opacity: 1;
                    }
                    &.isHeader {
                      height: 32px;
                    }
                    .ms-Fabric--isFocusVisible & {
                      opacity: 1;
                    }

                data-automationid="DetailsRowCheck"
                data-is-focusable={true}
                data-selection-toggle={true}
                id="header3-check"
                role="checkbox"
              >
                <div
                  className=
                      ms-Check
                      {
                        height: 18px;
                        line-height: 1;
                        position: relative;
                        user-select: none;
                        vertical-align: top;
                        width: 18px;
                      }
                      &:before {
                        background: #ffffff;
                        border-radius: 50%;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        opacity: 1;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                      }
                      $checkHost:hover &, $checkHost:focus &, &:hover, &:focus {
                        opacity: 1;
                      }
                >
                  <i
                    aria-hidden={true}
                    className=
                        ms-Check-circle
                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #c8c8c8;
                          display: inline-block;
                          font-family: "FabricMDL2Icons";
                          font-size: 18px;
                          font-style: normal;
                          font-weight: normal;
                          height: 18px;
                          left: 0px;
                          position: absolute;
                          speak: none;
                          text-align: center;
                          top: 0px;
                          vertical-align: middle;
                          width: 18px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          color: WindowText;
                        }
                    data-icon-name="CircleRing"
                    role="presentation"
                  >
                    
                  </i>
                  <i
                    aria-hidden={true}
                    className=
                        ms-Check-check
                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #c8c8c8;
                          display: inline-block;
                          font-family: "FabricMDL2Icons";
                          font-size: 16px;
                          font-style: normal;
                          font-weight: normal;
                          height: 18px;
                          left: .5px;
                          opacity: 0;
                          position: absolute;
                          speak: none;
                          text-align: center;
                          top: 0px;
                          vertical-align: middle;
                          width: 18px;
                        }
                        &:hover {
                          opacity: 1;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          -ms-high-contrast-adjust: none;
                        }
                    data-icon-name="StatusCircleCheckmark"
                    role="presentation"
                  >
                    
                  </i>
                </div>
              </div>
            </span>
          </div>
          <div
            aria-colindex={2}
            aria-sort="none"
            className="ms-DetailsHeader-cell is-actionable undefined"
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="key"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 24,
              }
            }
          >
            <span
              className=""
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header3-key-name "
                className="ms-DetailsHeader-cellTitle"
                data-is-focusable={true}
                id="header3-key"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className="ms-DetailsHeader-cellName"
                  id="header3-key-name"
                >
                  key
                </span>
              </span>
            </span>
          </div>
          <div
            aria-colindex={3}
            aria-sort="none"
            className="ms-DetailsHeader-cell is-actionable undefined"
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="name"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 24,
              }
            }
          >
            <span
              className=""
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header3-name-name "
                className="ms-DetailsHeader-cellTitle"
                data-is-focusable={true}
                id="header3-name"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className="ms-DetailsHeader-cellName"
                  id="header3-name-name"
                >
                  name
                </span>
              </span>
            </span>
          </div>
          <div
            aria-colindex={4}
            aria-sort="none"
            className="ms-DetailsHeader-cell is-actionable undefined"
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="value"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 24,
              }
            }
          >
            <span
              className=""
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header3-value-name "
                className="ms-DetailsHeader-cellTitle"
                data-is-focusable={true}
                id="header3-value"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className="ms-DetailsHeader-cellName"
                  id="header3-value-name"
                >
                  value
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          aria-describedby={undefined}
          aria-labelledby={undefined}
          className="ms-FocusZone"
          data-focuszone-id="FocusZone5"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="presentation"
        >
          <div
            className="ms-SelectionZone"
            onClick={[Function]}
            onContextMenu={[Function]}
            onDoubleClick={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseDown={[Function]}
            onMouseDownCapture={[Function]}
            role="presentation"
          >
            <div
              className="ms-List"
              role="presentation"
            >
              <div
                className="ms-List-surface"
                role="presentation"
              >
                <div
                  className="ms-List-page"
                  role="presentation"
                  style={Object {}}
                >
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={0}
                    role="presentation"
                  >
                    <div>
                      Item 0
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={1}
                    role="presentation"
                  >
                    <div>
                      Item 1
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={2}
                    role="presentation"
                  >
                    <div>
                      Item 2
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={3}
                    role="presentation"
                  >
                    <div>
                      Item 3
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={4}
                    role="presentation"
                  >
                    <div>
                      Item 4
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailsRow renders details list row with one row selected correctly 1`] = `
<div
  className="ms-Viewport"
  style={
    Object {
      "minHeight": 1,
      "minWidth": 1,
    }
  }
>
  <div
    aria-label={undefined}
    className="ms-DetailsList is-horizontalConstrained undefined"
    data-automationid="DetailsList"
    data-is-scrollable="false"
  >
    <div
      aria-colcount={4}
      aria-label={undefined}
      aria-readonly="true"
      aria-rowcount={6}
      role="grid"
    >
      <div
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          aria-describedby={undefined}
          aria-label={undefined}
          aria-labelledby={undefined}
          className="ms-FocusZone ms-DetailsHeader"
          data-automationid="DetailsHeader"
          data-focuszone-id="FocusZone7"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseMove={[Function]}
          role="row"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            aria-colindex={1}
            aria-labelledby="header6-check"
            className="ms-DetailsHeader-cell ms-DetailsHeader-cellIsCheck"
            onClick={[Function]}
            role="columnheader"
          >
            <span
              className=""
            >
              <div
                aria-checked={undefined}
                aria-describedby="header6-checkTooltip"
                aria-label={undefined}
                className=
                    ms-DetailsRow-check

                    {
                      align-items: center;
                      background-color: transparent;
                      background: none;
                      border: none;
                      box-sizing: border-box;
                      cursor: default;
                      display: flex;
                      height: 40px;
                      justify-content: center;
                      margin-bottom: 0px;
                      margin-left: 0px;
                      margin-right: 0px;
                      margin-top: 0px;
                      opacity: 0;
                      outline: transparent;
                      padding-bottom: 0px;
                      padding-left: 0px;
                      padding-right: 0px;
                      padding-top: 0px;
                      position: relative;
                      vertical-align: top;
                      width: 40px;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid #ffffff;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #666666;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    &:hover {
                      opacity: 1;
                    }
                    &.isHeader {
                      height: 32px;
                    }
                    .ms-Fabric--isFocusVisible & {
                      opacity: 1;
                    }

                data-automationid="DetailsRowCheck"
                data-is-focusable={true}
                data-selection-toggle={true}
                id="header6-check"
                role="checkbox"
              >
                <div
                  className=
                      ms-Check
                      {
                        height: 18px;
                        line-height: 1;
                        position: relative;
                        user-select: none;
                        vertical-align: top;
                        width: 18px;
                      }
                      &:before {
                        background: #ffffff;
                        border-radius: 50%;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        opacity: 1;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                      }
                      $checkHost:hover &, $checkHost:focus &, &:hover, &:focus {
                        opacity: 1;
                      }
                >
                  <i
                    aria-hidden={true}
                    className=
                        ms-Check-circle
                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #c8c8c8;
                          display: inline-block;
                          font-family: "FabricMDL2Icons";
                          font-size: 18px;
                          font-style: normal;
                          font-weight: normal;
                          height: 18px;
                          left: 0px;
                          position: absolute;
                          speak: none;
                          text-align: center;
                          top: 0px;
                          vertical-align: middle;
                          width: 18px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          color: WindowText;
                        }
                    data-icon-name="CircleRing"
                    role="presentation"
                  >
                    
                  </i>
                  <i
                    aria-hidden={true}
                    className=
                        ms-Check-check
                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #c8c8c8;
                          display: inline-block;
                          font-family: "FabricMDL2Icons";
                          font-size: 16px;
                          font-style: normal;
                          font-weight: normal;
                          height: 18px;
                          left: .5px;
                          opacity: 0;
                          position: absolute;
                          speak: none;
                          text-align: center;
                          top: 0px;
                          vertical-align: middle;
                          width: 18px;
                        }
                        &:hover {
                          opacity: 1;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          -ms-high-contrast-adjust: none;
                        }
                    data-icon-name="StatusCircleCheckmark"
                    role="presentation"
                  >
                    
                  </i>
                </div>
              </div>
            </span>
          </div>
          <div
            aria-colindex={2}
            aria-sort="none"
            className="ms-DetailsHeader-cell is-actionable undefined"
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="key"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 24,
              }
            }
          >
            <span
              className=""
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header6-key-name "
                className="ms-DetailsHeader-cellTitle"
                data-is-focusable={true}
                id="header6-key"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className="ms-DetailsHeader-cellName"
                  id="header6-key-name"
                >
                  key
                </span>
              </span>
            </span>
          </div>
          <div
            aria-colindex={3}
            aria-sort="none"
            className="ms-DetailsHeader-cell is-actionable undefined"
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="name"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 24,
              }
            }
          >
            <span
              className=""
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header6-name-name "
                className="ms-DetailsHeader-cellTitle"
                data-is-focusable={true}
                id="header6-name"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className="ms-DetailsHeader-cellName"
                  id="header6-name-name"
                >
                  name
                </span>
              </span>
            </span>
          </div>
          <div
            aria-colindex={4}
            aria-sort="none"
            className="ms-DetailsHeader-cell is-actionable undefined"
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="value"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 24,
              }
            }
          >
            <span
              className=""
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header6-value-name "
                className="ms-DetailsHeader-cellTitle"
                data-is-focusable={true}
                id="header6-value"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className="ms-DetailsHeader-cellName"
                  id="header6-value-name"
                >
                  value
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          aria-describedby={undefined}
          aria-labelledby={undefined}
          className="ms-FocusZone"
          data-focuszone-id="FocusZone8"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="presentation"
        >
          <div
            className="ms-SelectionZone"
            onClick={[Function]}
            onContextMenu={[Function]}
            onDoubleClick={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseDown={[Function]}
            onMouseDownCapture={[Function]}
            role="presentation"
          >
            <div
              className="ms-List"
              role="presentation"
            >
              <div
                className="ms-List-surface"
                role="presentation"
              >
                <div
                  className="ms-List-page"
                  role="presentation"
                  style={Object {}}
                >
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={0}
                    role="presentation"
                  >
                    <div>
                      Item 0
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={1}
                    role="presentation"
                  >
                    <div>
                      Item 1
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={2}
                    role="presentation"
                  >
                    <div>
                      Item 2
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={3}
                    role="presentation"
                  >
                    <div>
                      Item 3
                    </div>
                  </div>
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={4}
                    role="presentation"
                  >
                    <div>
                      Item 4
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
